<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".cc">

        <TextView
            android:id="@+id/textViewPlaces"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:text="@string/title_spinner_places"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerPlaces"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/title_spinner_places"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPlaces"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:text="@string/title_name_evaluated"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPlaces"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/inputNameEvaluated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/textViewName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="50dp"
            android:contentDescription="@string/title_evaluation_date"
            android:text="@string/title_evaluation_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputNameEvaluated"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextDateEvaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:autofillHints=""
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:inputType="text"
            android:labelFor="@id/textViewDate"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate"
            tools:ignore="Deprecated,LabelFor,SpeakableTextPresentCheck,TextFields" />

        <Button
            android:id="@+id/buttonStartEvaluation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/title_button_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDateEvaluation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>